UI fixes for card and styling autocomplete in light and dark modes

--- a/styles/style.css
+++ b/styles/style.css
@@ -180,7 +180,12 @@ header {
   background-color: rgba(222, 230, 233, 0.9);
   box-shadow: 0 10px 25px rgba(0,0,0,0.2);
 }
-
+.dark-mode .card:hover{
+  transform: translateY(-5px) scale(1.03);
+  background-color: rgba(222, 230, 233, 0.9);
+  box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+  color: #004E64;
+}
 .card a {
   color: #219EBC;
   font-weight: bold;
@@ -484,6 +489,9 @@ input[placeholder] .search-bar{
 .search-bar input:focus + .search-icon {
   fill: #219EBC;
 }
+.dark-mode .search-bar input {
+  color: #003B42;
+}
 
 /* Dark mode */
 .dark-mode .search-icon {
@@ -493,3 +501,36 @@ input[placeholder] .search-bar{
 .dark-mode .search-bar input:focus + .search-icon {
   fill: #7FDBFF;
 }
+.autocomplete-items {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  top: 100%;
+  left: 0;
+  right: 0;
+  background: white;
+}
+
+.autocomplete-items div {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.autocomplete-items div:hover {
+  background-color: #e9e9e9;
+}
+.dark-mode .autocomplete-items {
+  position: absolute;
+  border: 1px solid #d4d4d4;
+  border-bottom: none;
+  border-top: none;
+  z-index: 99;
+  top: 100%;
+  left: 0;
+  right: 0;
+  background: white;
+  color: #003B42;
+}
+
